www.opensnowmap.org/mobile.css
body{
    margin:0px;
    overflow:hidden;
    padding:0px;
    font-family:sans-serif;
    font-size: 0.9em;
    font-weight: 400;
    width: 100%; height:100%;
    color: #505050
   }
h1{
       font-family:sans-serif;
       font-size: 1.1em;
       font-weight: 300;
       letter-spacing: 0.1ex;
       border:0;
       padding: 0px;
       margin:0
   }
a:link, a:visited {
        color: #000000;
        text-decoration: none;
        font-weight: 400;
        margin: 0px
    }
    
a.amenu:link, a.amenu:visited {
        font-weight: 600;
        color: #444444;
        font-size: 1em;
        text-decoration: none;
        margin: 0px
    }
a.amenuLtEmphasis {
        color: #FF7800;
        font-size: 1em;
        text-decoration: none;
        font-weight: 800;
        margin: 0px
    }
select, option, input{
        background-color: #FFFFFF;
        width: 140px;
        font-size: 1em;
        border: 1px solid #CCCCCC;
        text-align: left;
        margin: 5px 5px 5px 5px;
}
.hrmenu{border: 0; width: 100%; height: 1px; color: #AAAAAA; background-color: #AAAAAA}
hr{border: 0; width: 90%; height: 1px; color: #AAAAAA; background-color: #AAAAAA}
hr.light{border: 0px; padding:0px; margin:0px; width: 100%; height: 1px; color: #CCC; background-color: #CCC}
hr.superlight{border: 0px; padding:0px; margin:0px 30px 0px 30px; width: 80%; height: 1px; color: #EEE; background-color: #EEE}
.news {
        font-size: 0.8em;
    
}
.clear { clear: both}
/*use to place divs side by side*/

.float-right{
    float:right
}
.float-left{
    float:left
}
.hidden {
    display: none
}
.shown {
    display: inline
}
#map {
        position: fixed;
        width: 100%; 
        top: 35px;
        left: 0px;
        bottom: 0px;
        border: 0px;
        padding: 0px;
     }
.olButton {
    z-index: 1004
}
#attribution{
position: absolute;
bottom: 1px;
right:1px;
font-size: 0.6em;
font-weight:300;
z-index: 1000;
background-color: #F5F5F5;
opacity: 0.4;
color: black;

}
.olControlZoom {visibility:hidden;}

#zoom{
    position: absolute;
    top:68px;
    right: 15px;
    width: 24px;
    font-size: 0.8em;
    text-align: center;
    vertical-align: center;
    color: #222;
    background-color: #FFF;
    opacity: 0.5;
    border: 1px solid #111;
    border-radius: 3px;
    opacity: 0.5;
    z-index: 1000;
}
#customZoom {
    z-index: 1001;
    position: absolute;
    top: 8px;
    right: 41px;
}
#customZoom a {
    text-decoration: none;
    position: absolute;
    display: block;
    text-align: center;
    vertical-align: center;
    color: #222;
    background-color: #FFF;
    opacity: 0.5;
    border: 1px solid #111;
    border-radius: 3px;
    width: 24px;
    line-height: 24px;
    height:24px;
    font-size: 1.2em;
}
#customZoom a:hover {
    background: #036;
}
#customZoomOut {
    top: 28px;
}
#content-control {
    width: 100%;
    background-color:#FFF;
    line-height: 1.8;
}
.closebox {float: right;}
#header{
position: absolute;
    float:right;
/*
    -moz-border-radius:6px;
    border-radius:6px;
*/
    border: 1px solid #AAAAAA;
    font-size: 0.75em;
    color: #050505;
    width: 100%;
    height: 40px;
    vertical-align: center;
    background-color:#FFF;
    background-image: url('pics/opensnowmap_title_thin_420.png');
    background-repeat: no-repeat;
    background-position: right center;
    background-attachment: scroll;
    background-size: 200px;
    
}
#swbg {
    background-color:#FFF;
    width: 21px;height: 12px;
    margin-top: 6px;
    border-radius:8px;
    border: 2px solid black;
}
#sw {
position: relative;
    background-color:#FFF;
    width: 12px;height: 12px;
    top:-2px;
    margin-left: -2px;
    border-radius:8px;
    border: 2px solid black;
    font-size: 8px;
    font-weight: 700;
    letter-spacing: -1px;
    color: #7D7D7D;
    text-align: center;
    vertical-align: middle;
    line-height: 12px;
}
.Button {
    background-color:#FDFDFD;
    border-style:solid;
    border-width:0px 0px 0px 0px;
    border-color: #1A1A1A;
    padding: 5px;
    margin: 2px;
/*
    -moz-border-radius:5px;
    border-radius:5px;
*/
}
.noBorder {
    border-width:0px;
    }
.ButtonStatic {
    background-color:#FDFDFD;
    border-style:solid;
    border-width:2px;
    border-color: #ccc;
    padding: 1px;
    margin: 2px;
    -moz-border-radius:5px;
    border-radius:5px;
}
.Button:hover{
    background-color:#DBDBDB;
}
.Button:active{
    background-color:#E65B3F;
}
.Button:disabled{
    background-color:#E65B3F;
    color: #AAA;
}
.iconButton{
   width: 30px;height: 30px;
    margin-left: 0px;
    margin-right:0px;
    border-width:0px;
/*
    border-radius:3px;
*/
    padding: 2px 2px 2px 2px;
}

.button-img {  
      width: 26px;
/*
      margin: 2px 2px 2px 2px;
*/
  }
.flagMenuImg {margin: 8px 5px 8px 5px;width: 20px;}
.reduceButton{
    right: 0px;
    margin-right:-10px;
}
.menuButton {
    margin-left:15px;
}
.textButton{
    font-weight: 500;
    color: #444444;
    font-size: 0.8em;
    text-decoration: none;
    padding-left: 5px;
    padding-right: 5px;
    padding-top:5px;
    padding-bottom:5px;
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 0px;
    margin-bottom: 1px;
    max-width: 200px;
    text-align:left;
}
.textButtonDropDown{
    font-weight: 500;
    color: #444444;
    font-size: 0.8em;
    text-decoration: none;
    padding-left: 5px;
    padding-right: 5px;
    padding-top:5px;
    padding-bottom:5px;
    margin-left: 20px;
    margin-right: 0px;
    margin-top: 0px;
    margin-bottom: 1px;
    max-width: 170px;
    text-align:left;
}

.menuDropDownContent {
    display:none;
    left: 20px;
    }

* {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
div.olMapViewport {
    -ms-touch-action: none;
    position: absolute;
}
.olLayerGrid .olTileImage {
    -webkit-transition: opacity 0.2s linear;
    -moz-transition: opacity 0.2s linear;
    -o-transition: opacity 0.2s linear;
    transition: opacity 0.2s linear;
}
/* Turn on GPU support where available */
/*
.olTileImage {
    -webkit-transform: translateZ(0);
    -moz-transform: translateZ(0);
    -o-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -ms-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-perspective: 1000;
    -moz-perspective: 1000;
    -ms-perspective: 1000;
    perspective: 1000;
}
*/

/*                  Piste list                       */
.pisteListElement{
    background-color:#FFF;
    margin: 0px;
    padding:0px;
    font-size:1em;
}
.pisteListButton{
    background-color:#FFFFFF;
    border: 0px solid grey;
    padding: 2px;
    margin: 0px;
    -moz-border-radius:4px;
    border-radius:4px;
}
.pisteListButtonStatic{
    background-color:#FFFFFF;
    border: 0px solid grey;
    padding: 2px;
    margin: 0px;
    -moz-border-radius:4px;
    border-radius:4px;
}
.pisteListButton:hover{
    background-color:#DDDDDD;
}
.pisteListButton:active{
    background-color:#CCCCCC;
}
.inRouteElement{
  font-size: 0.8em;
  font-style:oblique;
  margin: 0px 0px 0px 30px;
  float:left
}
.inSiteElement{
  font-size: 0.8em;
  font-style:oblique;
  margin: 0px 0px 0px 30px;
  float:right
}

.elementExtLink{
  font-size: 1.05em;
  font-style:oblique;
  margin: 0px 0px 0px 30px;
  float:left
}
.routeLengthElement{
  font-size: 1.2em;
}
.pisteIconDiv {
    float:left;
    vertical-align: middle;
}
.pisteIcon {
    margin-left: 3px;
}

.getProfileButton, .getMemberListButton, .moreInfoButton{
float:right;
}
  .flagMenuImg {vertical-align: middle;}

.textImg {vertical-align:middle;}
#piste_search_results{
    font-size: 0.7em;}
#nominatim_results{
    font-size: 0.7em;}
#content {
        position: fixed;
        top: 40px;
        bottom: 0px;
        left: 0px;
        right:10px;
        padding: 0px 10px 10px 10px;
/*
        -moz-border-radius:6px;
        border-radius:6px;
*/
        border-style: solid;
        border-color: #AAAAAA;
        border-width: 0px 1px 1px 1px;
        background-color: #FFF;
        z-index: 1000;
        overflow: auto;
     }

body {font-size: 1em;}
  #content {max-width:210px;width:210px;top: 39px;}
  #titleimg {width: 200px;} 
  #header{height: 38px;background-size: 200px;}
  #content-control {height: 36px;}
  #map {top: 38px;}

/*
}
*/
#search_input{width: 150px;}
#listViewportButton{width: 150px;}
.profilePic {
border: 2px solid #efefef;
padding: 2px 2px 2px 2px;
display: block;
margin-right:auto;
margin-left:auto;
}

